--- a/.github/workflows/cross-platform-test.yml
+++ b/.github/workflows/cross-platform-test.yml
@@ -190,7 +190,7 @@ jobs:
           find ./lfx-dist -name "*.whl" -type f
           WHEEL_FILE=$(find ./lfx-dist -name "*.whl" -type f | head -1)
           if [ -n "$WHEEL_FILE" ]; then
-            uv pip install --python ./test-env/Scripts/python.exe "$WHEEL_FILE"
+            uv pip install --prerelease=allow --python ./test-env/Scripts/python.exe "$WHEEL_FILE"
           else
             echo "No wheel file found in ./lfx-dist/"
             exit 1
@@ -218,7 +218,7 @@ jobs:
           find ./main-dist -name "*.whl" -type f
           WHEEL_FILE=$(find ./main-dist -name "*.whl" -type f | head -1)
           if [ -n "$WHEEL_FILE" ]; then
-            uv pip install --python ./test-env/Scripts/python.exe "$WHEEL_FILE"
+            uv pip install --prerelease=allow --python ./test-env/Scripts/python.exe "$WHEEL_FILE"
           else
             echo "No wheel file found in ./main-dist/"
             exit 1
@@ -232,7 +232,7 @@ jobs:
           find ./lfx-dist -name "*.whl" -type f
           WHEEL_FILE=$(find ./lfx-dist -name "*.whl" -type f | head -1)
           if [ -n "$WHEEL_FILE" ]; then
-            uv pip install --python ./test-env/bin/python "$WHEEL_FILE"
+            uv pip install --prerelease=allow --python ./test-env/bin/python "$WHEEL_FILE"
           else
             echo "No wheel file found in ./lfx-dist/"
             exit 1
@@ -260,7 +260,7 @@ jobs:
           find ./main-dist -name "*.whl" -type f
           WHEEL_FILE=$(find ./main-dist -name "*.whl" -type f | head -1)
           if [ -n "$WHEEL_FILE" ]; then
-            uv pip install --python ./test-env/bin/python "$WHEEL_FILE"
+            uv pip install --prerelease=allow --python ./test-env/bin/python "$WHEEL_FILE"
           else
             echo "No wheel file found in ./main-dist/"
             exit 1
@@ -341,6 +341,8 @@ jobs:
       - name: Test server startup (Unix)
         if: matrix.os != 'windows'
         timeout-minutes: 5
+        env:
+          OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
         run: |
           # Start server in background
           ./test-env/bin/python -m langflow run --host localhost --port 7860 --backend-only &
@@ -487,7 +489,7 @@ jobs:
           find ./lfx-dist -name "*.whl" -type f
           WHEEL_FILE=$(find ./lfx-dist -name "*.whl" -type f | head -1)
           if [ -n "$WHEEL_FILE" ]; then
-            uv pip install --python ./test-env/Scripts/python.exe "$WHEEL_FILE"
+            uv pip install --prerelease=allow --python ./test-env/Scripts/python.exe "$WHEEL_FILE"
           else
             echo "No wheel file found in ./lfx-dist/"
             exit 1
@@ -529,7 +531,7 @@ jobs:
           find ./lfx-dist -name "*.whl" -type f
           WHEEL_FILE=$(find ./lfx-dist -name "*.whl" -type f | head -1)
           if [ -n "$WHEEL_FILE" ]; then
-            uv pip install --python ./test-env/bin/python "$WHEEL_FILE"
+            uv pip install --prerelease=allow --python ./test-env/bin/python "$WHEEL_FILE"
           else
             echo "No wheel file found in ./lfx-dist/"
             exit 1
@@ -557,10 +559,66 @@ jobs:
           find ./main-dist -name "*.whl" -type f
           WHEEL_FILE=$(find ./main-dist -name "*.whl" -type f | head -1)
           if [ -n "$WHEEL_FILE" ]; then
-            uv pip install --python ./test-env/bin/python "$WHEEL_FILE"
+            uv pip install --prerelease=allow --python ./test-env/bin/python "$WHEEL_FILE"
           else
             echo "No wheel file found in ./main-dist/"
             exit 1
+          fi
+        shell: bash
+
+      - name: Force reinstall local wheels to prevent downgrades (Windows)
+        if: steps.install-method.outputs.method == 'wheel' && matrix.os == 'windows'
+        run: |
+          # Reinstall LFX if it was provided
+          if [ -n "${{ inputs.lfx-artifact-name }}" ]; then
+            LFX_WHEEL=$(find ./lfx-dist -name "*.whl" -type f | head -1)
+            if [ -n "$LFX_WHEEL" ]; then
+              echo "Force reinstalling LFX: $LFX_WHEEL"
+              NO_DEPS="--no-deps"
+              if [ "${{ inputs.pre_release }}" = "true" ]; then
+                NO_DEPS=""
+              fi
+              uv pip install --force-reinstall $NO_DEPS --prerelease=allow --python ./test-env/Scripts/python.exe "$LFX_WHEEL"
+            fi
+          fi
+
+          # Reinstall base
+          BASE_WHEEL=$(find ./base-dist -name "*.whl" -type f | head -1)
+          if [ -n "$BASE_WHEEL" ]; then
+            echo "Force reinstalling langflow-base: $BASE_WHEEL"
+            NO_DEPS="--no-deps"
+            if [ "${{ inputs.pre_release }}" = "true" ]; then
+              NO_DEPS=""
+            fi
+            uv pip install --force-reinstall $NO_DEPS --prerelease=allow --python ./test-env/Scripts/python.exe "$BASE_WHEEL"
+          fi
+        shell: bash
+
+      - name: Force reinstall local wheels to prevent downgrades (Unix)
+        if: steps.install-method.outputs.method == 'wheel' && matrix.os != 'windows'
+        run: |
+          # Reinstall LFX if it was provided
+          if [ -n "${{ inputs.lfx-artifact-name }}" ]; then
+            LFX_WHEEL=$(find ./lfx-dist -name "*.whl" -type f | head -1)
+            if [ -n "$LFX_WHEEL" ]; then
+              echo "Force reinstalling LFX: $LFX_WHEEL"
+              NO_DEPS="--no-deps"
+              if [ "${{ inputs.pre_release }}" = "true" ]; then
+                NO_DEPS=""
+              fi
+              uv pip install --force-reinstall $NO_DEPS --prerelease=allow --python ./test-env/bin/python "$LFX_WHEEL"
+            fi
+          fi
+
+          # Reinstall base
+          BASE_WHEEL=$(find ./base-dist -name "*.whl" -type f | head -1)
+          if [ -n "$BASE_WHEEL" ]; then
+            echo "Force reinstalling langflow-base: $BASE_WHEEL"
+            NO_DEPS="--no-deps"
+            if [ "${{ inputs.pre_release }}" = "true" ]; then
+              NO_DEPS=""
+            fi
+            uv pip install --force-reinstall $NO_DEPS --prerelease=allow --python ./test-env/bin/python "$BASE_WHEEL"
           fi
         shell: bash
 
@@ -638,6 +696,8 @@ jobs:
       - name: Test server startup (Unix)
         if: matrix.os != 'windows'
         timeout-minutes: 5
+        env:
+          OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
         run: |
           # Start server in background
           ./test-env/bin/python -m langflow run --host localhost --port 7860 --backend-only &
