--- a/.github/workflows/docker-build-v2.yml
+++ b/.github/workflows/docker-build-v2.yml
@@ -156,7 +156,8 @@ jobs:
           - arch: amd64
             runner: [Langflow-runner]
           - arch: arm64
-            runner: [self-hosted, linux, ARM64, langflow-ai-arm64-40gb]
+            runner:
+              [self-hosted, linux, ARM64, langflow-ai-arm64-40gb-ephemeral]
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Check out the code
@@ -226,7 +227,8 @@ jobs:
           - arch: amd64
             runner: [Langflow-runner]
           - arch: arm64
-            runner: [self-hosted, linux, ARM64, langflow-ai-arm64-40gb]
+            runner:
+              [self-hosted, linux, ARM64, langflow-ai-arm64-40gb-ephemeral]
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Check out the code
@@ -296,7 +298,8 @@ jobs:
           - arch: amd64
             runner: [Langflow-runner]
           - arch: arm64
-            runner: [self-hosted, linux, ARM64, langflow-ai-arm64-40gb]
+            runner:
+              [self-hosted, linux, ARM64, langflow-ai-arm64-40gb-ephemeral]
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Check out the code
@@ -370,7 +373,8 @@ jobs:
           - arch: amd64
             runner: [Langflow-runner]
           - arch: arm64
-            runner: [self-hosted, linux, ARM64, langflow-ai-arm64-40gb]
+            runner:
+              [self-hosted, linux, ARM64, langflow-ai-arm64-40gb-ephemeral]
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Check out the code
@@ -440,7 +444,8 @@ jobs:
           - arch: amd64
             runner: [Langflow-runner]
           - arch: arm64
-            runner: [self-hosted, linux, ARM64, langflow-ai-arm64-40gb]
+            runner:
+              [self-hosted, linux, ARM64, langflow-ai-arm64-40gb-ephemeral]
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Check out the code
@@ -510,7 +515,8 @@ jobs:
           - arch: amd64
             runner: [Langflow-runner]
           - arch: arm64
-            runner: [self-hosted, linux, ARM64, langflow-ai-arm64-40gb]
+            runner:
+              [self-hosted, linux, ARM64, langflow-ai-arm64-40gb-ephemeral]
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Check out the code
