--- a/docs/package.json
+++ b/docs/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.10.1",
+    "raw-loader": "^4.0.2",
     "redocusaurus": "^2.5.0",
     "rimraf": "^4.1.2",
     "tailwindcss": "^3.4.4"
