fix: Clear input fields data operations (#11773)
* feat: Pluggable AuthService with abstract base class (#10702) (#11654)

feat(auth): Pluggable AuthService with abstract base class (#10702)

* feat: Introduce service registration decorator and enhance ServiceManager for pluggable service discovery

- Added `register_service` decorator to allow services to self-register with the ServiceManager.
- Enhanced `ServiceManager` to support multiple service discovery mechanisms, including decorator-based registration, config files, and entry points.
- Implemented methods for direct service class registration and plugin discovery from various sources, improving flexibility and extensibility of service management.

* feat: Implement VariableService for managing environment variables

- Introduced VariableService class to handle environment variables with in-memory caching.
- Added methods for getting, setting, deleting, and listing variables.
- Included logging for service initialization and variable operations.
- Created an __init__.py file to expose VariableService in the package namespace.

* feat: Enhance LocalStorageService with Service integration and async teardown

- Updated LocalStorageService to inherit from both StorageService and Service for improved functionality.
- Added a name attribute for service identification.
- Implemented an async teardown method for future extensibility, even though no cleanup is currently needed.
- Refactored the constructor to ensure proper initialization of both parent classes.

* feat: Implement telemetry service with abstract base class and minimal logging functionality

- Added `BaseTelemetryService` as an abstract base class defining the interface for telemetry services.
- Introduced `TelemetryService`, a lightweight implementation that logs telemetry events without sending data.
- Created `__init__.py` to expose the telemetry service in the package namespace.
- Ensured robust async methods for logging various telemetry events and

--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -70,6 +70,18 @@ jobs:
               exit 1
           fi
 
+      - name: Cleanup after main image
+        run: |
+          echo "=== Disk usage before cleanup ==="
+          df -h /
+          ${{ env.CONTAINER_RUNTIME }} rmi langflowai/langflow:latest-dev || true
+          ${{ env.CONTAINER_RUNTIME }} system prune -af || true
+          if command -v docker &> /dev/null; then
+            docker buildx prune -af || true
+          fi
+          echo "=== Disk usage after cleanup ==="
+          df -h /
+
       - name: Build backend image
         run: |
           ${{ env.CONTAINER_RUNTIME }} build -t langflowai/langflow-backend:latest-dev \
@@ -85,6 +97,19 @@ jobs:
               echo "Actual version: $version"
               exit 1
           fi
+
+      - name: Cleanup after backend image
+        run: |
+          echo "=== Disk usage before cleanup ==="
+          df -h /
+          ${{ env.CONTAINER_RUNTIME }} rmi langflowai/langflow-backend:latest-dev || true
+          ${{ env.CONTAINER_RUNTIME }} system prune -af || true
+          if command -v docker &> /dev/null; then
+            docker buildx prune -af || true
+          fi
+          echo "=== Disk usage after cleanup ==="
+          df -h /
+
       - name: Build frontend image
         run: |
           ${{ env.CONTAINER_RUNTIME }} build -t langflowai/langflow-frontend:latest-dev \
