--- a/src/backend/base/pyproject.toml
+++ b/src/backend/base/pyproject.toml
@@ -60,10 +60,11 @@ dependencies = [
     "sentry-sdk[fastapi,loguru]>=2.5.1,<3.0.0",
     "chardet>=5.2.0,<6.0.0",
     "firecrawl-py>=1.0.16,<2.0.0",
-    "opentelemetry-api>=1.25.0,<2.0.0",
-    "opentelemetry-sdk>=1.25.0,<2.0.0",
-    "opentelemetry-exporter-prometheus>=0.46b0,<1.0.0",
-    "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0.0",
+    "opentelemetry-api>=1.30.0,<2.0.0",
+    "opentelemetry-sdk>=1.30.0,<2.0.0",
+    "opentelemetry-exporter-prometheus>=0.50b0,<1.0.0",
+    "opentelemetry-exporter-otlp>=1.30.0,<2.0.0",
+    "opentelemetry-instrumentation-fastapi>=0.50b0,<1.0.0",
     "prometheus-client>=0.20.0,<1.0.0",
     "aiofiles>=24.1.0,<25.0.0",
     "pip>=25.3,<26.0.0",
